--- a/themes/achp/sass/regions/_content.scss
+++ b/themes/achp/sass/regions/_content.scss
@@ -17,7 +17,6 @@
         text-shadow: none;
         text-align: left;
       }
-
       #block-achp-local-tasks ul {
         list-style-type: none;
         padding-left: 0;
@@ -31,13 +30,11 @@
         }
       }
     }
-
-    footer {
+/*    footer {
       background-color: #fff;
       height: auto;
       margin-bottom: 20px;
-    }
-
+    }*/
     p {
       text-align: left;
     }
